--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ section {
     font-weight: 700;
 }
 
-.Dream Area {
+.dream_rea {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
